--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&amp;display=swap" crossorigin>
 <link rel="preload" as="style" href="./_import/style.6ae57e22.css">
-<link rel="preload" as="style" href="./_observablehq/stdlib/inputs.ea9fd553.css">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&amp;display=swap" crossorigin>
 <link rel="stylesheet" type="text/css" href="./_import/style.6ae57e22.css">
-<link rel="stylesheet" type="text/css" href="./_observablehq/stdlib/inputs.ea9fd553.css">
 <link rel="modulepreload" href="./_observablehq/client.fedf0981.js">
 <link rel="modulepreload" href="./_observablehq/runtime.e080113b.js">
 <link rel="modulepreload" href="./_observablehq/stdlib.eabb1795.js">
 <link rel="modulepreload" href="./_npm/htl@0.3.1/72f4716c.js">
-<link rel="modulepreload" href="./_observablehq/stdlib/inputs.5ca2ce9b.js">
-<link rel="modulepreload" href="./_npm/isoformat@0.2.1/18cbf477.js">
 <script type="module">
 
 import {define} from "./_observablehq/client.fedf0981.js";
@@ -143,33 +139,23 @@ const allIssues = [...cardiovascularIssues, ...orthopedicIssues, ...neuroscience
 return {cardiovascularIssues,orthopedicIssues,neuroscienceIssues,womensChildrensIssues,allData,allIssues};
 }});
 
-define({id: "ab985dc4", inputs: ["brand","serviceLines","view","Inputs"], outputs: ["viewOptions","selectedView"], body: (brand,serviceLines,view,Inputs) => {
+define({id: "1224a20d", inputs: ["brand","serviceLines","Mutable"], outputs: ["viewOptions","selectedViewState","selectedViewId","setView"], body: (brand,serviceLines,Mutable) => {
 // ============================================
-// VIEW SELECTOR (Portfolio or Service Line)
+// VIEW STATE (Using Mutable for tab navigation)
 // ============================================
 
 const viewOptions = [
-  { id: "portfolio", name: "Portfolio Overview", icon: "📊", color: brand.gray },
+  { id: "portfolio", name: "Portfolio", icon: "📊", color: brand.gray },
   ...serviceLines
 ];
 
-const selectedView = view(Inputs.select(viewOptions, {
-  label: "View",
-  format: v => `${v.icon} ${v.name}`,
-  value: viewOptions[0]
-}));
-return {viewOptions,selectedView};
-}});
+const selectedViewState = Mutable("portfolio");
+const selectedViewId = selectedViewState.generator;
 
-define({id: "8a3b3b72", inputs: ["selectedView","allIssues","allData","pillarLeaders"], outputs: ["isPortfolioView","currentIssues","currentLeaders"], body: (selectedView,allIssues,allData,pillarLeaders) => {
-// ============================================
-// CURRENT DATA BASED ON VIEW
-// ============================================
-
-const isPortfolioView = selectedView.id === "portfolio";
-const currentIssues = isPortfolioView ? allIssues : (allData[selectedView.id] || []);
-const currentLeaders = isPortfolioView ? null : pillarLeaders[selectedView.id];
-return {isPortfolioView,currentIssues,currentLeaders};
+function setView(id) {
+  selectedViewState.value = id;
+}
+return {viewOptions,selectedViewState,selectedViewId,setView};
 }});
 
 define({id: "bbcc6bec", inputs: ["serviceLines"], outputs: ["calculateSavings","calculateRevenue","getUpcomingKaizens","getServiceLineName"], body: (serviceLines) => {
@@ -285,7 +271,7 @@ isPortfolioView ? html`<div class="hero-section">
 ))
 }});
 
-define({id: "41afdc48", inputs: ["isPortfolioView","html","serviceLines","allData","brand","calculateSavings","display"], body: async (isPortfolioView,html,serviceLines,allData,brand,calculateSavings,display) => {
+define({id: "58106fb5", inputs: ["isPortfolioView","html","serviceLines","allData","setView","brand","calculateSavings","display"], body: async (isPortfolioView,html,serviceLines,allData,setView,brand,calculateSavings,display) => {
 display(await(
 // ============================================
 // SERVICE LINE CARDS (Portfolio View Only)
@@ -299,7 +285,10 @@ isPortfolioView ? html`
     const implementing = issues.filter(i => i.status === "Implementing").length;
     const blocked = issues.filter(i => i.labels?.some(l => l.toLowerCase().includes("blocked"))).length;
     return html`
-      <div class="card" style="border-top: 4px solid ${sl.color}; cursor: pointer;" onclick="document.querySelector('select').value = '${sl.id}'; document.querySelector('select').dispatchEvent(new Event('input'));">
+      <div class="card" style="border-top: 4px solid ${sl.color}; cursor: pointer; transition: all 0.2s ease;"
+        onclick=${() => setView(sl.id)}
+        onmouseover=${(e) => { e.currentTarget.style.transform = 'translateY(-4px)'; e.currentTarget.style.boxShadow = '0 8px 24px rgba(0,0,0,0.12)'; }}
+        onmouseout=${(e) => { e.currentTarget.style.transform = 'translateY(0)'; e.currentTarget.style.boxShadow = ''; }}>
         <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 12px;">
           <div style="font-size: 32px;">${sl.icon}</div>
           <div>
@@ -323,6 +312,9 @@ isPortfolioView ? html`
         <div style="display: flex; justify-content: space-between; font-size: 14px; margin-top: 4px;">
           <span style="color: ${brand.grayLight};">Savings</span>
           <span style="font-weight: 700; color: ${brand.teal};">${calculateSavings(issues)}</span>
+        </div>
+        <div style="margin-top: 12px; text-align: center; font-size: 12px; color: ${sl.color}; font-weight: 600;">
+          View Details →
         </div>
       </div>
     `;
@@ -573,11 +565,13 @@ html`<div style="text-align: center; color: ${brand.grayLight}; font-size: 12px;
 <main id="observablehq-main" class="observablehq">
 <div class="observablehq observablehq--block"><!--:e976c6e0:--></div>
 <div class="observablehq observablehq--block"><!--:6bda6829:--></div>
-<div class="observablehq observablehq--block"><!--:ab985dc4:--></div>
-<div class="observablehq observablehq--block"><!--:8a3b3b72:--></div>
+<div class="observablehq observablehq--block"><!--:1224a20d:--></div>
+<div class="observablehq observablehq--block">
+  <div class="observablehq--inspect observablehq--error">SyntaxError: Unterminated template (49:3)</div>
+</div>
 <div class="observablehq observablehq--block"><!--:bbcc6bec:--></div>
 <div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:293944c0:--></div>
-<div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:41afdc48:--></div>
+<div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:58106fb5:--></div>
 <div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:14046e4c:--></div>
 <div class="observablehq observablehq--block"><!--:37c2261c:--></div>
 <div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:a6fa1916:--></div>
