--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 import {define} from "./_observablehq/client.fedf0981.js";
 
-define({id: "9ec8e7a3", outputs: ["brand","serviceLines","pillarLeaders","kanbanStates","swimlanes","columnDescriptions"], body: () => {
+define({id: "a8130a37", outputs: ["brand","serviceLines","pillarLeaders","kanbanStates","swimlanes","columnDescriptions"], body: () => {
 // ============================================
 // CONFIGURATION & BRAND COLORS
 // ============================================
@@ -69,26 +69,26 @@ const swimlanes = [
 const columnDescriptions = {
   "new-product": {
     "Funnel": "K1: Request received, champion identified",
-    "Reviewing": "K2-K3: 8-agent framework initiated, coalition forming",
-    "Analyzing": "K3-K4: All 8 agents complete, decision package ready",
-    "Backlog": "K4-K5: Kaizen scheduled, awaiting capacity",
-    "Implementing": "K5: GO approved, pilot/rollout in progress",
+    "Reviewing": "K2: Coalition forming, Kaizen scheduled",
+    "Analyzing": "K3-K4: 8-agent analysis, Kaizen decision",
+    "Backlog": "K5: APPROVED, awaiting implementation capacity",
+    "Implementing": "K5-K6: Pilot/rollout in progress",
     "Done": "K8: Lookback complete, formulary finalized",
   },
   "re-evaluation": {
     "Funnel": "K1: Trigger identified (safety, evidence, utilization)",
-    "Reviewing": "K2-K3: Lookback data collection, stakeholders engaged",
-    "Analyzing": "K3-K4: Impact assessment, alternatives evaluated",
-    "Backlog": "K4-K5: Kaizen scheduled for reassessment decision",
-    "Implementing": "K5: Sustain/Modify/Remove action executing",
+    "Reviewing": "K2: Stakeholders engaged, Kaizen scheduled",
+    "Analyzing": "K3-K4: Lookback analysis, Kaizen decision",
+    "Backlog": "K5: APPROVED, awaiting implementation capacity",
+    "Implementing": "K5-K6: Sustain/Modify/Remove executing",
     "Done": "K8: Formulary updated, transition complete",
   },
   "sourcing": {
     "Funnel": "S0/K1: Category assessed, urgency documented",
-    "Reviewing": "S1/K2: Coalition building, vendor submissions",
-    "Analyzing": "S2/K3: Clinical equivalence, business case complete",
-    "Backlog": "S3/K4: Strategy Kaizen scheduled, negotiation ready",
-    "Implementing": "S4/K5: Contract execution, vendor transition",
+    "Reviewing": "S1/K2: Coalition building, Kaizen scheduled",
+    "Analyzing": "S2-S3/K3-K4: Equivalence analysis, Kaizen decision",
+    "Backlog": "K5: Strategy APPROVED, awaiting contract execution",
+    "Implementing": "S4/K5-K6: Contract execution, vendor transition",
     "Done": "S5/K8: Contract live, savings realized",
   },
 };
@@ -625,7 +625,7 @@ html`<div style="text-align: center; color: ${brand.grayLight}; font-size: 12px;
 </nav>
 </aside>
 <main id="observablehq-main" class="observablehq">
-<div class="observablehq observablehq--block"><!--:9ec8e7a3:--></div>
+<div class="observablehq observablehq--block"><!--:a8130a37:--></div>
 <div class="observablehq observablehq--block"><!--:9f43d801:--></div>
 <div class="observablehq observablehq--block"><!--:1224a20d:--></div>
 <div class="observablehq observablehq--block">
