--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ isPortfolioView ? html`<div class="hero-section">
 ))
 }});
 
-define({id: "2984ce64", inputs: ["isPortfolioView","html","serviceLines","allData","setView","brand","calculateSavings","display"], body: async (isPortfolioView,html,serviceLines,allData,setView,brand,calculateSavings,display) => {
+define({id: "1ed7ae8e", inputs: ["isPortfolioView","html","serviceLines","allData","setView","brand","calculateSavings","calculateRevenue","display"], body: async (isPortfolioView,html,serviceLines,allData,setView,brand,calculateSavings,calculateRevenue,display) => {
 display(await(
 // ============================================
 // SERVICE LINE CARDS (Portfolio View Only)
@@ -336,18 +336,25 @@ isPortfolioView ? html`
           <span style="color: ${brand.grayLight};">In Progress</span>
           <span style="font-weight: 700; color: ${brand.magenta};">${implementing}</span>
         </div>
-        ${blocked > 0 ? html`
         <div style="display: flex; justify-content: space-between; font-size: 14px; margin-top: 4px;">
           <span style="color: ${brand.grayLight};">Blocked</span>
-          <span style="font-weight: 700; color: #ef4444;">${blocked}</span>
-        </div>` : ""}
+          <span style="font-weight: 700; color: ${blocked > 0 ? '#ef4444' : brand.grayLight};">${blocked}</span>
+        </div>
         <div style="display: flex; justify-content: space-between; font-size: 14px; margin-top: 4px;">
           <span style="color: ${brand.grayLight};">Proj. Savings</span>
           <span style="font-weight: 700; color: ${brand.teal};">${calculateSavings(issues, "projected")}</span>
         </div>
         <div style="display: flex; justify-content: space-between; font-size: 14px; margin-top: 4px;">
-          <span style="color: ${brand.grayLight};">Realized</span>
+          <span style="color: ${brand.grayLight};">Realized Savings</span>
           <span style="font-weight: 700; color: #10B981;">${calculateSavings(issues, "realized")}</span>
+        </div>
+        <div style="display: flex; justify-content: space-between; font-size: 14px; margin-top: 4px;">
+          <span style="color: ${brand.grayLight};">Proj. Revenue</span>
+          <span style="font-weight: 700; color: ${brand.magenta};">${calculateRevenue(issues, "projected")}</span>
+        </div>
+        <div style="display: flex; justify-content: space-between; font-size: 14px; margin-top: 4px;">
+          <span style="color: ${brand.grayLight};">Realized Revenue</span>
+          <span style="font-weight: 700; color: #10B981;">${calculateRevenue(issues, "realized")}</span>
         </div>
         <div style="margin-top: 12px; text-align: center; font-size: 12px; color: ${sl.color}; font-weight: 600;">
           View Details →
@@ -633,7 +640,7 @@ html`<div style="text-align: center; color: ${brand.grayLight}; font-size: 12px;
 </div>
 <div class="observablehq observablehq--block"><!--:82b9df95:--></div>
 <div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:41c4d0c9:--></div>
-<div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:2984ce64:--></div>
+<div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:1ed7ae8e:--></div>
 <div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:14046e4c:--></div>
 <div class="observablehq observablehq--block"><!--:37c2261c:--></div>
 <div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:a6fa1916:--></div>
