--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ html`
 ))
 }});
 
-define({id: "c929cf6b", inputs: ["html","serviceLines","allData","activeFilter","setFilter","brand","pillarLeaders","calculateImpact","display"], body: async (html,serviceLines,allData,activeFilter,setFilter,brand,pillarLeaders,calculateImpact,display) => {
+define({id: "9207bc29", inputs: ["html","serviceLines","allData","activeFilter","setFilter","brand","pillarLeaders","calculateImpact","display"], body: async (html,serviceLines,allData,activeFilter,setFilter,brand,pillarLeaders,calculateImpact,display) => {
 display(await(
 // ============================================
 // SERVICE LINE CARDS (Filter buttons)
@@ -334,10 +334,9 @@ html`
           </div>
         </div>
         <div style="font-size: 11px; color: ${brand.grayLight}; margin-bottom: 8px;">
-          <div><strong style="color: ${brand.gray};">Clinical:</strong> ${sl.champion}</div>
+          <div><strong style="color: ${brand.gray};">Clinical:</strong> ${sl.champion} <span style="opacity: 0.5;">·</span> <strong style="color: ${brand.gray};">Admin:</strong> ${sl.dyad}</div>
           <div><strong style="color: ${brand.gray};">Operations:</strong> ${pillarLeaders[sl.id]?.operations || "TBD"}</div>
           <div><strong style="color: ${brand.gray};">Financial:</strong> ${pillarLeaders[sl.id]?.financial || "TBD"}</div>
-          <div style="margin-top: 2px;"><strong style="color: ${brand.gray};">Dyad:</strong> ${sl.dyad}</div>
         </div>
         <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 4px; font-size: 13px; text-align: center;">
           <div>
@@ -520,7 +519,7 @@ display(renderKanban(currentIssues, !isFiltered))
 <div class="observablehq observablehq--block"><!--:18a399ee:--></div>
 <div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:99be97d5:--></div>
 <div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:dd963e73:--></div>
-<div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:c929cf6b:--></div>
+<div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:9207bc29:--></div>
 <div class="observablehq observablehq--block"><!--:ebae053c:--></div>
 <div class="observablehq observablehq--block"><!--:18e9c1ef:--></div>
 <div class="observablehq observablehq--block"><observablehq-loading></observablehq-loading><!--:6b0bf2d2:--></div>
